--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,10 @@ tests/**/err.tmp
 examples/**/results
 examples/**/.tkenvrc
 examples/**/valgrind.out
+
+.gitignore
+*.files
+*.config
+*.user
+*.creator
+.build-config
